Add reference to Pact Net and web projects

--- a/Samples/EventApi/Provider.Api.Web.DotnetCore.Tests/Provider.Api.Web.DotnetCore.Tests.csproj
+++ b/Samples/EventApi/Provider.Api.Web.DotnetCore.Tests/Provider.Api.Web.DotnetCore.Tests.csproj
@@ -14,4 +14,9 @@
     <DotNetCliToolReference Include="dotnet-xunit" Version="2.3.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\PactNet\PactNet.csproj" />
+    <ProjectReference Include="..\Provider.Api.Web.DotnetCore\Provider.Api.Web.DotnetCore.csproj" />
+  </ItemGroup>
+
 </Project>
